feat: events admin endpoint
